# Kenny-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  bot.py  bot.sh  docker-compose.yml  help.txt  pyproject.toml  tweetctl.py
ai/: __init__.py  chat.py  client.py  genimg.py  google_speech.py  runner.py  search.py
cogs/: __init__.py  audit_logger.py  base.py  game_commands.py  member_logger.py  message_logger.py  mod_panel.py  reaction_roles.py  slash_commands.py  tts_reader.py  voice_logger.py
commands/: __init__.py  action_commands.py  ping.py
config/: bot_settings.yaml
data/: bot_settings.yaml  chat_rag.md
data/message_logs/: guild_1079582114363756574_channel_1079585891095425186.json  guild_1317683053027659786_channel_1333282450687791196.json  (+8 more)
doc/: README.md  bot-talk.md  system-design.md
external_recorder/: helper_record.mjs  package-lock.json  package.json
guards/: __init__.py  mod_actions.py  spam_guard.py
knowledge/: chat_rag.md
prompts/: prompts.toml
runtime/: AGENTS.md
src/kennybot/: __init__.py  bootstrap.py  (+1 more)
systemd/: kennybot-voicevox.service  kennybot.service
tests/: test_message_logger_summary.py
utils/: __init__.py  ai_progress.py  app_constants.py  app_settings.py  build_info.py  channel.py  command_catalog.py  config.py  countdown.py  env.py  event_logger.py  live_info.py  local_rag.py  logger.py  meeting_minutes.py  message_logger.py  message_store.py  message_vector_store.py  paths.py  prompts.py  runtime_settings.py  scoped_data.py  single_instance.py  text.py  voice_recv_patch.py  vrchat_world.py
(+78 files in other folders)
